[tool.poetry]
name = "corgi-concourse-resource"
version = "1.1.2"
description = "Concourse CI resource for Content Output Review and Generation Interface (CORGI)"
authors = ["OpenStax Content Engineering"]
license = "AGPLv3.0"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pytest-cov = "^4.0.0"
pytest-vcr = "^1.0.2"
flake8 = "^5.0.4"

[tool.poetry.scripts]
check = "src.check:main"
in = "src.in_:main"
out = "src.out:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

