[tool.poetry]
name = "corgi-concourse-resource"
version = "1.1.2"
description = "Concourse CI resource for Content Output Review and Generation Interface (CORGI)"
authors = ["OpenStax Content Engineering"]
license = "AGPLv3.0"
readme = "README.md"
packages = [
    { include = "corgi_concourse_resource" }
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"


pytest = { version = "^7.1.3", optional = true }
pytest-cov = { version = "^4.0.0", optional = true }
pytest-vcr = { version = "^1.0.2", optional = true }
flake8 = { version = "^5.0.4", optional = true }


[tool.poetry.extras]
test = ["pytest", "pytest-cov", "pytest-vcr", "flake8"]

[tool.poetry.scripts]
check = "corgi_concourse_resource.check:main"
in = "corgi_concourse_resource.in_:main"
out = "corgi_concourse_resource.out:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

